RESOLVED FIXED40283
HTML5Lexer does not handle <div FOO ><img><img></div> correctly
https://bugs.webkit.org/show_bug.cgi?id=40283
Summary HTML5Lexer does not handle <div FOO ><img><img></div> correctly
Eric Seidel (no email)
Reported 2010-06-07 23:39:11 PDT
HTML5Lexer does not handle <div FOOFOO ><img><img></div> correctly
Attachments
test case as patch (1.10 KB, patch)
2010-06-07 23:41 PDT, Eric Seidel (no email)
no flags
Patch (2.79 KB, patch)
2010-06-07 23:56 PDT, Eric Seidel (no email)
abarth: review+
Eric Seidel (no email)
Comment 1 2010-06-07 23:41:04 PDT
Created attachment 58114 [details] test case as patch
Eric Seidel (no email)
Comment 2 2010-06-07 23:56:23 PDT
Adam Barth
Comment 3 2010-06-07 23:58:38 PDT
Comment on attachment 58116 [details] Patch A patch of beauty.
Eric Seidel (no email)
Comment 4 2010-06-08 00:20:43 PDT
Note You need to log in before you can comment on or make changes to this bug.